[tool.poetry]
name = "math2"
version = "0.1.0"
description = "git playground"
authors = ["HuipengXu <2531094755@qq.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
